# SLAU_solution

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: .gitlab-ci.yml
src/: Band5Matrix.cpp  Band5Matrix.h  CMakeLists.txt  ConsoleApplication.cpp  ConsoleApplication.h  DenseMatrix.cpp  DenseMatrix.h  LeastResidualMethod.cpp  LeastResidualMethod.h  Matrix.h  SLAUSolver.cpp  SLAUSolver.h  main.cpp
tests/: CMakeLists.txt  FindCUnit.cmake  testSLAUSolution.cpp
